--- a/css/white.css
+++ b/css/white.css
@@ -5,6 +5,8 @@
 body {
   color: #000;
   font: 1em 'PT Sans', sans-serif;
+  background-color: antiquewhite;
+  text-align: center;
 }
 
 ::selection {
@@ -77,4 +79,33 @@ body {
     border-bottom: 2px solid #4EC6DE;
     padding-bottom: .5em;
   }
+}
+
+/* Add a black background color to the top navigation */
+.nav-bar {
+  background-color: #333;
+  overflow: hidden;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.nav-bar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.nav-bar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.nav-bar a.active {
+  background-color: #141414;
+  color: white;
 }
